Fix: Fixed gap on open modal login

--- a/Frontend/pawcients-front/src/css/global/forms.css
+++ b/Frontend/pawcients-front/src/css/global/forms.css
@@ -1,13 +1,12 @@
-* {
-  padding: 0;
-  margin: 0;
-}
 .page-container {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   background-color: var(--background-page);
+}
+.management {
+  margin: 0px !important;
 }
 
 .brand-container {
