--- a/Frontend/pawcients-front/src/css/global/login.scss
+++ b/Frontend/pawcients-front/src/css/global/login.scss
@@ -1,7 +1,3 @@
-.management {
-  margin: 20px;
-}
-
 .management-header {
   display: flex;
   justify-content: space-between;
